# ThermoCalcBot

./: .env.dev  .env.example  .env.prod  .env.staging  .env.telegram  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  QUICK_START.md  README.md  README_TELEGRAM_BOT.md  REFACTORING_TZ.md  TECHNICAL_SPECIFICATION.md  TELEGRAM_BOT_EXAMPLES.md  benchmark_test.py  conftest.py  docker-compose.dev.yml  docker-compose.yml  main.py  prompts.py  pydantic_ai.md  pyproject.toml  pytest.ini  run_telegram_bot.py  simple_benchmark.py  telegram_bot.py  test_fes_case.py  test_fes_fixed.py  test_logging.py  test_phase_filter.py  test_search_functionality.py
.claude/: settings.json  settings.local.json
.github/: ARCHITECTURE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/instructions/: architecture.instructions.md
data/static_compounds/: C.yaml  CO.yaml  CO2.yaml  Cl2.yaml  FeO.yaml  H2O.yaml  HCl.yaml  NH3.yaml  NaCl.yaml  O2.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  DEPLOYMENT.md  REFACTORING_TECHNICAL_SPECIFICATION.md  STAGE1_IMPLEMENTATION_SUMMARY.md  TELEGRAM_BOT_ARCHITECTURE.md  TELEGRAM_BOT_SETUP.md  UPDATE_v2.0_TIMEOUTS.md  VPS_DEPLOYMENT.md  calc_example.ipynb  code_review_multiphase_analysis.md  database_analysis_report.md  database_analysis_results.json  db_example.md  db_work.ipynb  examples_query.md  filtering_strategy_results.json  fixes_20251012.md  multi_phase_integration_guide.md  optimization_report_20251012.md  pydantic-ai-ru.md  pydantic_docs.md  session_analysis_20251012_011207.md  session_analysis_20251012_013850.md  session_analysis_20251012_123247.md  session_analysis_20251012_154504.md  session_analysis_20251012_161106.md  session_analysis_20251012_170146.md  session_analysis_20251012_174515.md  tech_spec_v1.md  telegram_bot_security_guide.md  test_queries_results.json  timeout_optimization_20251012.md  user_guide.md  сhlorination_of_tungsten.ipynb
docs/specs/: README.md  architecture_spec.md  compound_data_spec.md  h298_s298_ref_change_spec.md  implementation_plan.md  logging_specification.md  logs_spec.md  multiphases_spec.md  optimal_record_selection.md  output_spec.md  refactor_spec.md  refactoring_stage_01_cleanup.md  refactoring_stage_02_core_logic.md  refactoring_stage_03_formatting.md  refactoring_stage_04_testing.md  stage_03_formatting_improvements.md  sulphur_spec.md  telegram_bot_integration.md  tz_compound_validation.md
docs/tech_specs/: README.md  prompts.py  stage_01_analysis_and_design.md  stage_02_configuration_and_infrastructure.md  stage_03_core_implementation.md  stage_04_monitoring_and_testing.md  stage_05_deployment_and_structure.md  (+7 more)
examples/: README.md  advanced_filtering.py  basic_usage.py  compound_data_example.py  custom_formatters.py  custom_temperature_step.py  reaction_calculation_example.py  search_example.py  sql_builder_demo.py  stage_02_demo.py  stage_07_demo.py  stage_07_simple_demo.py  stage_1_demo.py  stage_2_feo_validation_simple.py
nginx/: nginx.conf
scripts/: backup.sh  check_columns.py  database_analysis.py  deploy_production.sh  filtering_strategy_prototype.py  run_dev.py  run_full_validation.sh  run_validation.py  setup_ssl.sh  test_queries.py
src/: __init__.py
tests/: test_compound_data_formatter.py  test_fe2o3_coefficient_validation.py  test_main_thermo_agent.py  test_query_classification.py  test_reaction_calculation_formatter.py  test_sql_agent.py  test_sql_builder.py  test_telegram_bot.py  test_telegram_components.py  test_thermodynamic_agent.py  test_thermodynamic_calculator.py  test_timeout_manager_fixes.py
(+294 files in other folders)
